# journal

./: .gitignore  README.md  pyproject.toml
journal/: __init__.py  __main__.py  anthropic_client.py  cli.py  client.py  compact.py  config.py  context.py  crypto.py  reader.py  render.py  storage.py
scripts/: setup.sh  stop.sh
